tests/parser/syntax-errors/token-not-found/expected_colon_elif_case.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    if True:
        pass
    elif False
        1


# CHECK:      SyntaxError (line 6, column 15): token of kind TokenKind.COLON not found.
# CHECK-NEXT: >>>    elif False
# CHECK-NEXT: >>>--------------^
